# stripack-sys

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  SECURITY.md  build.rs
.github/: PULL_REQUEST_TEMPATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-libs.yml  test.yml
fortran/: LICENSE
proptest-regressions/: ffi.txt
src/: ffi.rs  lib.rs
