[package]
name = "stripack-sys"
version = "0.1.0"
edition = "2024"
links = "stripack"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ChosunOne/stripack-sys"
keywords = ["triangle", "mesh", "delaunay", "sphere", "voronoi"]
categories = ["algorithms", "external-ffi-bindings", "mathematics", "science", "data-structures"]
documentation = "https://docs.rs/stripack-sys"
description = "Raw Rust FFI bindings to STRIPACK for Delaunay triangulation on the unit sphere"

[build-dependencies]

[dev-dependencies]
rstest = "^0.26.1"
proptest = "^1.9.0"
test-strategy = "^0.4.4"
