[package]
name = "stripack-sys"
version = "0.1.0"
edition = "2024"
links = "stripack"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ChosunOne/stripack-sys"
keywords = ["triangle", "mesh", "delaunay", "sphere", "voronoi"]
categories = ["algorithms", "external-ffi-bindings", "mathematics", "science", "data-structures"]
documentation = "https://docs.rs/stripack-sys"
description = "Raw Rust FFI bindings to STRIPACK for Delaunay triangulation on the unit sphere"
rust-version = "1.93.0"

[build-dependencies]
which = "^8.0.0"

[dev-dependencies]
rstest = "^0.26.1"
proptest = {version = "^1.9.0", features = ["std"]}
test-strategy = "^0.4.4"
